# corgy

./: .commitlintrc.yaml  .cspell.json  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .versionrc  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  release.sh  tox.ini  versions.json
.github/workflow-templates/: release-add-wheel.yml  test-package.yml
.github/workflows/: build-site.yml  github-release.yml  pypi-publish.yml  release-add-wheel.yml  test-package.yml
9.1/: 404.html  index.html  objects.inv  sitemap.xml
9.1/search/: search_index.js  search_index.json
9.1/usage/: corgy.html  corgy.types.html
9.2/: sitemap.xml
9.2/usage/: corgy.types.html
9.3/: sitemap.xml
9.3/search/: search_index.js  search_index.json
9.3/usage/: corgy.html  corgy.types.html
corgi/: __init__.py  corgi.py
corgy/: __init__.py  _actions.py  _annotations.py  _corgy.py  _corgychecker.py  _corgyparser.py  _enum.py  _helpfmt.py  _meta.py  _utils.py  _version.py  corgy.py  helpfmt.py  types.py
corgy/types/: __init__.py  _dir.py  _expand.py  _filepath.py  _initargs.py  _inputfile.py  _keyvaluepairs.py  _outputfile.py  _subclass.py
docs/: conf.py  corgy.md  corgy.types.md  index.md  make.sh
docs/www/usage/: corgy.md  corgy.types.md
latest/usage/: corgy.html  corgy.types.html
tests/: test_corgi.py  test_corgy.py  test_corgychecker.py  test_corgyparser.py  test_doctests.py  test_helpfmt.py  test_types.py
tests/types/: _pklclasses.py  _specialtmps.py  _test_file.py  test_dirs.py  test_filepaths.py  test_initargs.py  test_inputfiles.py  test_keyvaluepairs.py  test_outputfiles.py  test_subclass.py
