[tool.poetry]
name = "corgy"
version = "1.4.0"
description = "Elegant command line parsing"
authors = ["Jayanth Koushik <jnkoushik@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jayanthkoushik/corgy"
packages = [
    { include = "corgy" },
    { include = "tests", format = "sdist" }
]
include = ["CHANGELOG.md", "example.png", "docs"]

keywords = [
    "argparse",
    "argument parsing",
    "command line parsing",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
crayons = {version = "^0.4.0", optional = true}

[tool.poetry.extras]
colors = ["crayons"]

[tool.poetry.dev-dependencies]
black = { version = ">=20.8b0", allow-prereleases = true }
pylint = "^2.9"
pre-commit = "^2.0"
isort = "^5.1"
mypy = ">=0.8"
pydocstyle = "^6.0"
Sphinx = "^4.0"
sphinx-markdown-builder = { git = "https://github.com/clayrisser/sphinx-markdown-builder" }

[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.isort]
line_length = 88
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
force_alphabetical_sort_within_sections = true

[tool.pylint.FORMAT]
max-line-length = "88"

[tool.pylint.'MESSAGES CONTROL']
disable = """
    fixme,
    missing-docstring,
    invalid-name,
    ungrouped-imports,
    wrong-import-order,
    wrong-import-position,
    import-outside-toplevel,
    unused-argument,
    no-self-use,
    no-member,
    protected-access,
    attribute-defined-outside-init,
    too-few-public-methods,
    too-many-public-methods,
    too-many-ancestors,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-locals,
    too-many-statements,
    too-many-lines,
    too-many-branches,
    too-many-nested-blocks,
    too-many-return-statements,
    too-many-boolean-expressions,
"""

[tool.pydocstyle]
convention = "pep257"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
